# grog

./: .gitignore  BUILD.bazel  Gopkg.toml  Makefile  RESOURCES.md  WORKSPACE  docker-compose.yaml  workspace-status.sh
api/: client.go
client/: BUILD.bazel  client.go
cmd/grafo/: BUILD.bazel  main.go
cmd/grog/: BUILD.bazel  main.go
docs/grammar/: sample.schema
internal/bootstrap/: BUILD.bazel  cluster.go  flags.go  keygen.go  root.go  server.go  version.go
internal/bootstrap/cmd/: BUILD.bazel  cluster.go  flags.go  keygen.go  query.go  root.go  schema.go  server.go  util.go  version.go
internal/bootstrap/server/: BUILD.bazel  cluster.go  serf.go
internal/cluster/: BUILD.bazel  cluster.go  member.go
internal/cluster/cluster/: BUILD.bazel  cluster.go
internal/director/: BUILD.bazel  cluster.go  config.go  director.go
internal/graph/: BUILD.bazel  graph.go
internal/graph/grafoql/: BUILD.bazel  GrafoQL.g4  grafoql.go  grafoql_base_listener.go  grafoql_lexer.go  grafoql_listener.go  grafoql_parser.go
internal/graph/schema/: BUILD.bazel  Schema.g4  schema.go  schema_base_listener.go  schema_lexer.go  schema_listener.go  schema_parser.go
internal/parser/: BUILD.bazel  config.go  schema.go
internal/parser/config/: BUILD.bazel  Config.g4  config_base_listener.go  config_lexer.go  config_listener.go  config_parser.go
internal/parser/query/: BUILD.bazel  Query.g4  query_base_listener.go  query_lexer.go  query_listener.go  query_parser.go
internal/parser/schema/: BUILD.bazel  Schema.g4
internal/rpc/: BUILD.bazel  codec.go  external.fbs  external_generated.go  internal.fbs  internal_generated.go  rpc.pb.go  rpc.proto
internal/server/: cluster.go  serf.go
internal/util/cliutil/: BUILD.bazel  cliutil.go
internal/util/fs/: BUILD.bazel  fs.go
internal/util/grammar/: BUILD.bazel  error.go
internal/util/hash/: BUILD.bazel  hash.go
internal/util/json/: BUILD.bazel  jsonx.go
internal/util/random/: BUILD.bazel  random.go
internal/util/rest/: BUILD.bazel  etag.go  headers.go  mimetypes.go  rest.go
internal/util/validate/: BUILD.bazel
