load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "github.com/grogdb/grogdb/api",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/dgraph-io/badger:go_default_library",
        "//vendor/github.com/go-chi/chi:go_default_library",
        "//vendor/github.com/hashicorp/raft:go_default_library",
        "//vendor/github.com/hashicorp/serf/serf:go_default_library",
        "//vendor/github.com/satori/go.uuid:go_default_library",
    ],
)
