load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/grafodb/grafodb/cmd/grafo",
    visibility = ["//visibility:private"],
    deps = ["//internal/bootstrap/cmd:go_default_library"],
)

go_binary(
    name = "grafo",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    x_defs = {
        "main.Build": "{GIT_COMMIT}",
        "main.Version": "{VERSION}",
    },
)

go_image(
    name = "docker-image",
    binary = ":grafo",
    visibility = ["//visibility:public"],
)
