load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cluster.go",
        "member.go",
    ],
    importpath = "github.com/grafodb/grafodb/internal/cluster",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/util/fs:go_default_library",
        "//internal/util/random:go_default_library",
        "//vendor/github.com/hashicorp/serf/serf:go_default_library",
        "//vendor/github.com/rs/zerolog:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)
