load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["graph.go"],
    importpath = "github.com/grafodb/grafodb/internal/graph",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/cluster:go_default_library",
        "//vendor/github.com/go-chi/chi:go_default_library",
        "//vendor/github.com/rs/zerolog:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)
