load("@io_bazel_rules_go//go:def.bzl", "go_library")

#gazelle:proto disable

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "codec.go",
        "external_generated.go",
        "internal_generated.go",
        "rpc.pb.go",
    ],
    importpath = "github.com/grogdb/grogdb/internal/rpc",
    visibility = ["//:__subpackages__"],
    deps = [
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
        "//vendor/github.com/google/flatbuffers/go",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)
