load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cluster.go",
        "flags.go",
        "keygen.go",
        "query.go",
        "root.go",
        "schema.go",
        "server.go",
        "version.go",
    ],
    importpath = "github.com/grogdb/grogdb/internal/bootstrap/cmd",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/parser:go_default_library",
        "//internal/util/cliutil:go_default_library",
        "//internal/util/random:go_default_library",
        "//vendor/github.com/rs/zerolog:go_default_library",
        "//vendor/github.com/rs/zerolog/log:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/github.com/spf13/viper:go_default_library",
    ],
)
