load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cluster.go",
        "serf.go",
    ],
    importpath = "github.com/grogdb/grogdb/internal/server",
    visibility = ["//:__subpackages__"],
    deps = ["//vendor/github.com/hashicorp/serf/serf:go_default_library"],
)
