load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_antlr//antlr:antlr4.bzl", "antlr4")

antlr4(
    name = "go",
    srcs = glob(["*.g4"]),
    language = "Go",
    package = "override",
)

#keep
go_library(
    name = "go_default_library",
    importpath = "github.com/grogdb/grogdb/internal/parser/schema",
    visibility = ["//:__subpackages__"],
    deps = ["//vendor/github.com/antlr/antlr4/runtime/Go/antlr:go_default_library"],
)
