load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["error.go"],
    importpath = "github.com/grafodb/grafodb/internal/util/grammar",
    visibility = ["//:__subpackages__"],
    deps = ["//vendor/github.com/antlr/antlr4/runtime/Go/antlr:go_default_library"],
)
